a propos overflow corrected
les onglets dans A propos avait un overflow qui depassait de la page

--- a/css/style.css
+++ b/css/style.css
@@ -548,4 +548,9 @@ nav.pager-nav {
     width: calc(100% - 70px);
     float: left;
   }
+  ul.quicktabs-tabs li {
+    display: block;
+  }
 }
+
+
